<resources>
    <string name="app_name">EatingRecord</string>
    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_profile">Profile</string>

    <string name="recommend_menu">추천 메뉴</string>
    <string name="today_record">오늘의 기록</string>

    <string name="past_record">지난 기록</string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>

    <string name="my_info">내 정보</string>
    <string name="my_age">나이</string>
    <string name="my_height">키</string>
    <string name="my_weight">몸무게</string>
    <string name="my_sex">성별</string>
    <string name="my_meal_count">식사 횟수</string>
    <string name="modify">수정하기</string>
    <string name="notice">알림</string>
    <string name="sex_men">남</string>
    <string name="sex_women">여</string>
    <string name="not_select">선택 안 함</string>

    <string name="title_modify">내 정보 수정하기</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
</resources>