<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.eatingrecord.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_recommend_detail"
            app:destination="@id/navigation_home_recommend_detail">
            <argument
                android:name="menuId"
                app:argType="string"
                android:defaultValue="0000000" />
        </action>
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_record_detail"
            app:destination="@id/navigation_home_record_detail">
            <argument
                android:name="menuId"
                app:argType="string"
                android:defaultValue="0000000" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_home_recommend_detail"
        android:name="com.example.eatingrecord.ui.home.HomeRecommendDetailFragment"
        android:label="HomeRecommendDetail"
        tools:layout="@layout/fragment_recommend_detail">
        <argument
            android:name="menuId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_record_detail"
        android:name="com.example.eatingrecord.ui.home.HomeRecordDetailFragment"
        android:label="HomeRecordDetail"
        tools:layout="@layout/fragment_today_record_detail">
        <argument
            android:name="menuId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.eatingrecord.ui.record.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record">
        <action
            android:id="@+id/action_navigation_record_to_navigation_record_date_detail"
            app:destination="@id/navigation_record_date_detail">
            <argument
                android:name="date"
                app:argType="string"
                android:defaultValue="2000-01-01" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_record_date_detail"
        android:name="com.example.eatingrecord.ui.record.RecordDateDetailFragment"
        android:label="RecordDateDetail"
        tools:layout="@layout/fragment_record_date_detail">
        <argument
            android:name="date"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.eatingrecord.ui.profile.ProfileFragment"
        android:label = "@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>